# the-repository

./: .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: console.rs  function kelvin2RGB(kelvin) {.js  init.rs  main.rs
kernel/src/driver/: keyboard.rs  mod.rs  mouse.rs
kernel/src/driver/acpi/: madt.rs  mod.rs
kernel/src/driver/framebuffer/: graphics.rs  mod.rs
kernel/src/graphics/: asc16.rs  color.rs  mod.rs  rect.rs
kernel/src/interrupts/: apic.rs  gdt.rs  idt.rs  mod.rs
kernel/src/kernel_alloc/: allocator.rs  memory.rs  mod.rs
src/: main.rs
