[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11.3"
linked_list_allocator = "0.10.5"
ps2 = "0.2.0"
x86_64 = "0.14.10"
# apic = { path = "../crates/apic-rs" }
x2apic = "0.4.2"
pic8259 = "0.10.4"
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
